# rt_websocket

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
src/pointcloud_websocket/: connection_manager.py  main.py
src/pointcloud_websocket/services/: bson_sender.py  ros_client.py  ros_client_trajectory.py  ros_client_xyz.py  video_sender.py
src/rtWebsocket/: __init__.py  connection_manager.py  main.py
src/rtWebsocket/middleware/: timeout.py
src/rtWebsocket/services/: bson_sender.py  flatten_sender.py  text_sender.py  video_h264_sender.py  video_sender.py  video_v9_sender.py
tests/: test_client.py  test_connection_manager.py  test_main.py  test_ros_clients.py
tests/test_client/: docker-compose.yaml
tests/test_client/test_frontend/vue/: package-lock.json  package.json  vite.config.ts
tests/test_client/test_frontend/vue/src/: App.vue
tests/test_client/test_frontend/vue/src/router/: index.ts
tests/test_client/test_frontend/vue/src/test/: pcdViewer.vue  test_api_handling.vue  test_api_handling2.vue  test_api_handling_sender.vue
