[tool.poetry]
name = "pointcloud-websocket"
version = "0.1.0"
description = "A WebSocket library for ROS communication"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
rospy = "^1.15.0"
pypcd = "^0.1.0"
bson = "^0.5.10"
pytest = "^7.2.2"
pytest-asyncio = "^0.20.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"